--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,14 @@ dependencies {
     implementation 'com.jjoe64:graphview:4.2.1'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.wonderkiln:camerakit:0.13.1'
+
+    // Room components
+    implementation "android.arch.persistence.room:runtime:$rootProject.roomVersion"
+    annotationProcessor "android.arch.persistence.room:compiler:$rootProject.roomVersion"
+    androidTestImplementation "android.arch.persistence.room:testing:$rootProject.roomVersion"
+
+    // Lifecycle components
+    implementation "android.arch.lifecycle:extensions:$rootProject.archLifecycleVersion"
+    annotationProcessor "android.arch.lifecycle:compiler:$rootProject.archLifecycleVersion"
 }
 apply plugin: 'com.google.gms.google-services'
