added expandable fab buttons, as discussed.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,10 +47,12 @@ dependencies {
     // Lifecycle components
     implementation "android.arch.lifecycle:extensions:$archLifecycleVersion"
     annotationProcessor "android.arch.lifecycle:compiler:$archLifecycleVersion"
-
     implementation "android.arch.persistence.room:runtime:$roomVersion"
     annotationProcessor "android.arch.persistence.room:compiler:$roomVersion"
     kapt "android.arch.persistence.room:compiler:$roomVersion"
+
+    // Fab buttons
+    implementation 'com.github.wangjiegulu:rfab:2.0.0'
 }
 
 
