functionality to add transactions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,8 @@
             android:label="@string/title_activity_master"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".CameraActivity" />
-        <activity android:name=".PreviewActivity"></activity>
+        <activity android:name=".PreviewActivity" />
+        <activity android:name=".AddTransactionActivity"></activity>
     </application>
 
 </manifest>
