--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,9 @@ dependencies {
 
     // Fab buttons
     implementation 'com.github.wangjiegulu:rfab:2.0.0'
+
+    // Volley for http client
+    implementation 'com.android.volley:volley:1.1.0'
 }
 
 
